third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-msrv/transmute-mut-dst-not-asbytes.stderr
error[E0277]: the trait bound `Dst: AsBytes` is not satisfied
  --> tests/ui-msrv/transmute-mut-dst-not-asbytes.rs:24:36
   |
24 | const DST_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `Dst`
   |
note: required by a bound in `AssertDstIsAsBytes`
  --> tests/ui-msrv/transmute-mut-dst-not-asbytes.rs:24:36
   |
24 | const DST_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsAsBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
